--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -53,6 +53,7 @@
 </header>
 
 <main role="main">
+    {% if block('carousel') is defined %}
 
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -101,7 +102,7 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-
+    {% endif %}
 
     <!-- Marketing messaging and featurettes
     ================================================== -->
