--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,7 @@
         <!-- Bootstrap core CSS -->
         <link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet">
         <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
+        <link rel="icon" type="image/png" href="{{ asset('assets/uploads/bkl.png') }}" />
         <style>
             .bd-placeholder-img {
                 font-size: 1.125rem;
