add class Cart + CartController + templating

--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nos produits{% endblock %}
+{% block title %}Bankal - produits{% endblock %}
 
 {% block content %}
 <div class="row">
