--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,3 @@
-
-  
 <!doctype html>
 <html lang="fr">
 
@@ -14,7 +12,7 @@
         <!-- Bootstrap core CSS -->
         <link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet">
         <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
-        <link rel="icon" type="image/png" href="{{ asset('assets/uploads/bkl.png') }}" />
+        <link rel="icon" type="image/png" href="{{ asset('assets/img/bkl.png') }}" />
         <style>
             .bd-placeholder-img {
                 font-size: 1.125rem;
@@ -24,6 +22,7 @@
                 -ms-user-select: none;
                 user-select: none;
             }
+
             @media (min-width: 768px) {
                 .bd-placeholder-img-lg {
                     font-size: 3.5rem;
@@ -55,13 +54,18 @@
                         </li>
                     </ul>
                     <div class="navbar-item-custom">
-                    {% if app.user %}
-                    <a href="{{ path('account') }}">Compte (<small>{{ app.user.firstname }})</small></a> | <a href="{{ path('app_logout') }}">Déconnexion</a>
-                    {% else %}
-                    <a href="{{ path('app_login') }}">Connexion</a> | <a href="{{ path('register') }}">Inscription</a>
-                    {% endif %}
-                </div>
+                        {% if app.user %}
+                        <a href="{{ path('account') }}">Compte (<small>{{ app.user.firstname }})</small></a> | <a
+                            href="{{ path('app_logout') }}">Déconnexion</a>
+                        {% else %}
+                        <a href="{{ path('app_login') }}">Connexion</a> | <a
+                            href="{{ path('register') }}">Inscription</a>
+                        {% endif %}
 
+                        <a href="{{ path('cart') }}">
+                            <img src="{{ asset('assets/img/shopping-cart.png') }}" class="cart-icon" height="20px" alt="panier">
+                        </a>
+                    </div>
                 </div>
             </nav>
         </header>
@@ -148,8 +152,8 @@
             <!-- FOOTER -->
             <footer class="footer-custom">
                 <p>&copy; 2017-2020 Bankal, Inc.</p>
-                    <p><a href="#">Privacy</a></p>
-                    <p><a href="#">Terms</a></p>
+                <p><a href="#">Privacy</a></p>
+                <p><a href="#">Terms</a></p>
             </footer>
         </main>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
